add project final

--- a/stayreserve-aggregator-servic/src/main/resources/application.properties
+++ b/stayreserve-aggregator-servic/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=stayreserve-aggregator-servic
 spring.graphql.graphiql.enabled=true
+
+# user-service
+grpc.client.hotel-catalog.address=static://hotel-catalog:6565
+grpc.client.hotel-catalog.negotiationType=PLAINTEXT
+
+
