--- a/stayreserve-hotel-catalog/pom.xml
+++ b/stayreserve-hotel-catalog/pom.xml
@@ -5,50 +5,74 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.7</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>3.3.5</version>
+        <relativePath/>
     </parent>
+
     <groupId>dev.aira</groupId>
     <artifactId>stayreserve-hotel-catalog</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>stayreserve-hotel-catalog</name>
     <description>stayreserve-hotel-catalog</description>
+
     <properties>
         <java.version>21</java.version>
+        <grpc.version>1.60.1</grpc.version>
     </properties>
+
     <dependencies>
+        <!-- Proto gerado -->
         <dependency>
             <groupId>dev.aira</groupId>
             <artifactId>proto</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <!-- gRPC Spring Boot -->
         <dependency>
             <groupId>net.devh</groupId>
             <artifactId>grpc-server-spring-boot-starter</artifactId>
+            <version>3.1.0.RELEASE</version>
         </dependency>
+
+        <!-- Banco de dados e JPA -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+
+        <!-- Testes -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>net.devh</groupId>
             <artifactId>grpc-client-spring-boot-starter</artifactId>
+            <version>3.1.0.RELEASE</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-testing</artifactId>
+            <version>${grpc.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
@@ -60,5 +84,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
